Show connector status
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>